Stats tests is done